# VibeDeck

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  vibe-deck  vibe-deck.bat
docs/: ACKNOWLEDGMENTS.md  adapter-research.md  guide-claude-code-connect.md  v0.1-issues.md
docs/adr/: 0001-multi-terminal-architecture.md  0002-standard-frame-pipeline.md  0003-endpoint-renderer-split.md
docs/issues/: terminal-vs-layout-confusion.md
examples/: demo.py
tests/: manual_key_test.py  test_animation.py  test_cli.py  test_core.py  test_e2e_phase3.py
vibe_deck/: __init__.py  cli.py  config.py  core.py
vibe_deck/adapters/: __init__.py  schema.py
vibe_deck/adapters/claude_code/: __init__.py  adapter.yaml  hook.sh  hooks.json  hooks.template.json  reporter.py
vibe_deck/connectors/: __init__.py  base.py  file_watcher.py  process_scanner.py
vibe_deck/core/: __init__.py  adapter_manager.py  event_loop.py  layout.py  message_bus.py  terminal_registry.py  types.py  window_focus.py
vibe_deck/mcp/: __init__.py  server.py
vibe_deck/platform/: __init__.py  _darwin.py  _linux.py  _protocols.py  _windows.py
vibe_deck/render/: __init__.py  animation.py  animation_loader.py  animation_types.py  hardware.py  renderer.py  sim.py  standard_frame.py
vibe_deck/templates/: default-phone-3x4.yaml  default-phone-3x5.yaml  default-phone-4x8.yaml  default-streamdeck-mini.yaml  default-streamdeck-xl.yaml  default-streamdeck.yaml
vibe_deck/transport/: __init__.py  _protocol.py  hid.py  web.py
vibe_deck/web/: __init__.py  server.py
(+21 files in other folders)
